style: exact with added to company logo to avoid distortion

--- a/src/components/UI/molecules/JobFooterCard/JobFooterCard.module.scss
+++ b/src/components/UI/molecules/JobFooterCard/JobFooterCard.module.scss
@@ -8,6 +8,12 @@
   padding: 20px 20px 120px 20px;
   gap: 10px;
 
+  > img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+  }
+
   h2 {
     font-size: 14px;
     font-style: normal;
@@ -41,9 +47,7 @@
       }
 
       > img {
-        width: 100px;
-        height: 100px;
-        object-fit: contain;
+        width: auto;
       }
     }
   }
